sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: type mismatch;
 found   : Double
 required: Int
	var ecart = int2double(Math.floor(getNombreValeurs()-1/2))
                                         ^